navbar fix for continuous collapse and styling

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #fafafa
+    background-color: #fdfdfd;
 }
 
 /*----------NAVBAR---------*/
@@ -22,10 +22,20 @@ body {
     }
 }
 
+.language {
+    display: inline-block;
+    padding-right: 20px;
+    line-height: 40px;
+}
+
+.language:hover {
+    color: #564F6F!important;
+    text-decoration: none;
+}
 
 a {
     background-color: #E4E4E4;
-    color: #88888;
+    color: #888888;
     font-size: 18px;
     padding-left: 10px;
     padding-right: 10px;
@@ -42,6 +52,42 @@ a {
     float: right!important;
 }
 
+@media (max-width: 5000px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,.navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in{
+        display:block !important;
+    }
+}
 
 /*----------JUMBOTRON----------*/
 
@@ -71,14 +117,14 @@ h2 {
 
 .work {
     background-attachment: fixed;
-    background-image: url('desk.jpg');
+    background-image: url('desk2.jpg');
     background-position: center;
     background-size: cover;
     padding-bottom: 50px;
 }
 
 .card {
-    background-color: #fafafa;
+    background-color: #fdfdfd;
     border-radius: 2.5%;
     width: 18em;
     height: 18em;
